--- a/app/src/main/res/values-es/general.xml
+++ b/app/src/main/res/values-es/general.xml
@@ -82,4 +82,5 @@
     <string name="text_reject">Rechazar</string>
     <string name="text_count_messages">Mensajes</string>
     <string name="text_sending_file">Enviando archivo</string>
+    <string name="text_activated">activado</string>
 </resources>
