--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -605,7 +605,11 @@
             app:destination="@id/conversationCameraFragment" />
         <action
             android:id="@+id/action_contactProfileFragment_to_customUserNotificationFragment"
-            app:destination="@id/customUserNotificationFragment" />
+            app:destination="@id/customUserNotificationFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:exitAnim="@anim/slide_out_left"
+            app:popExitAnim="@anim/slide_out_right"/>
     </fragment>
     <fragment
         android:id="@+id/attachmentAudioFragment"
@@ -801,19 +805,16 @@
     </fragment>
     <fragment
         android:id="@+id/notificationFragment"
-        android:name="com.naposystems.napoleonchat.ui.notifications.NotificationSettingFragment"
+        android:name="com.naposystems.napoleonchat.ui.notificationSetting.NotificationSettingFragment"
         android:label="@string/text_notifications"
         tools:layout="@layout/notification_setting_fragment" />
     <fragment
         android:id="@+id/customUserNotificationFragment"
         android:name="com.naposystems.napoleonchat.ui.customUserNotification.CustomUserNotificationFragment"
-        android:label="custom_user_notification_fragment"
+        android:label="@string/text_notifications"
         tools:layout="@layout/custom_user_notification_fragment" >
         <argument
-            android:name="contactId"
-            app:argType="integer" />
-        <argument
-            android:name="activeCustomNotification"
-            app:argType="boolean"/>
+            android:name="contact"
+            app:argType="com.naposystems.napoleonchat.entity.Contact" />
     </fragment>
 </navigation>
