--- a/app/src/main/res/values-de/general.xml
+++ b/app/src/main/res/values-de/general.xml
@@ -83,4 +83,5 @@
     <string name="text_reject">Ablehnen</string>
     <string name="text_count_messages">Beiträge</string>
     <string name="text_sending_file">Senden Datei</string>
+    <string name="text_activated">aktiviert</string>
 </resources>
