--- a/app/src/main/res/values-fr/general.xml
+++ b/app/src/main/res/values-fr/general.xml
@@ -83,4 +83,5 @@
     <string name="text_reject">Refuser</string>
     <string name="text_count_messages">Des postes</string>
     <string name="text_sending_file">l\'envoi de fichiers</string>
+    <string name="text_activated">activé</string>
 </resources>
