--- a/app/src/main/res/values-fr/notification.xml
+++ b/app/src/main/res/values-fr/notification.xml
@@ -3,4 +3,7 @@
     <string name="text_notifications">Notifications</string>
     <string name="text_notification_tone">Tonalité de notification</string>
     <string name="text_select_notification_tone">Sélectionnez la tonalité de notification</string>
+    <string name="text_custom_notifications">Notifications personnalisées</string>
+    <string name="text_notification_message">Notifications de message</string>
+    <string name="text_customize_notification">Personnalisez les notifications</string>
 </resources>
