--- a/app/src/main/res/values-it/general.xml
+++ b/app/src/main/res/values-it/general.xml
@@ -83,4 +83,5 @@
     <string name="text_reject">Per rifiutare</string>
     <string name="text_count_messages">Messaggi</string>
     <string name="text_sending_file">File di Invio</string>
+    <string name="text_activated">attivato</string>
 </resources>
