--- a/app/src/main/res/values-pt/general.xml
+++ b/app/src/main/res/values-pt/general.xml
@@ -83,4 +83,5 @@
     <string name="text_reject">Recusar</string>
     <string name="text_count_messages">Postagens</string>
     <string name="text_sending_file">Envio de arquivo</string>
+    <string name="text_activated">ativado</string>
 </resources>
