--- a/app/src/main/res/drawable/ic_message_unread.xml
+++ b/app/src/main/res/drawable/ic_message_unread.xml
@@ -9,7 +9,7 @@
         android:strokeWidth="1"
         android:strokeColor="@color/color_C0C0C0" />
     <path
-        android:fillColor="@color/white"
+        android:fillColor="@color/color_FFFFFF"
         android:pathData="M39,12m-11.5,0a11.5,11.5 0,1 1,23 0a11.5,11.5 0,1 1,-23 0"
         android:strokeWidth="1"
         android:strokeColor="@color/color_C0C0C0" />
