--- a/app/src/main/res/values-es/mapAttachment.xml
+++ b/app/src/main/res/values-es/mapAttachment.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="text_error_map">Ha ocurrido un error al capturar el mapa</string>
     <string name="text_site_not_found">No se pudo encontrar el sitio</string>
+    <string name="text_location_not_found">No fue posible establecer la ubicación, Por favor selecciónela manualmente.</string>
+    <string name="text_location_not_found_without_connection">No fue posible establecer la ubicación, revisa la conexión a internet.</string>
 </resources>
