--- a/app/src/main/res/values-it/mapAttachment.xml
+++ b/app/src/main/res/values-it/mapAttachment.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="text_error_map">Si è verificato un errore durante l\'acquisizione della mappa</string>
     <string name="text_site_not_found">Impossibile trovare il sito</string>
+    <string name="text_location_not_found">Impossibile impostare la posizione, selezionare manualmente.</string>
+    <string name="text_location_not_found_without_connection">Non è stato possibile stabilire la posizione, controllare la connessione a Internet.</string>
 </resources>
