--- a/app/src/main/res/layout/preview_image_fragment.xml
+++ b/app/src/main/res/layout/preview_image_fragment.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent"
         android:background="@color/black">
 
-        <ImageView
+        <com.naposystems.napoleonchat.utility.ZoomImage
             android:id="@+id/imageViewPreview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
