--- a/app/src/main/res/layout/add_contact_fragment.xml
+++ b/app/src/main/res/layout/add_contact_fragment.xml
@@ -1,82 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:custom="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/coordinator"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".ui.addContact.AddContactFragment">
 
-    <data>
-
-    </data>
-
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:id="@+id/coordinator"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ui.addContact.AddContactFragment">
+        android:layout_height="match_parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        <ViewSwitcher
+            android:id="@+id/viewSwitcher"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:inAnimation="@anim/fade_in"
+            android:outAnimation="@anim/fade_out"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <ViewSwitcher
-                android:id="@+id/viewSwitcher"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:inAnimation="@anim/fade_in"
-                android:outAnimation="@anim/fade_out"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-                    android:id="@+id/swipe_refresh"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <ViewSwitcher
-                        android:id="@+id/viewSwitcher_friendship_request"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:inAnimation="@anim/fade_in"
-                        android:outAnimation="@anim/fade_out">
-
-                        <com.naposystems.napoleonchat.ui.custom.emptyState.EmptyStateCustomView
-                            android:id="@+id/empty_state_friendship_request"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            custom:titleEmptyState="@string/text_empty_state_friendship_description"
-                            custom:image="?attr/attrImageEmptyStateFriendshipRequest" />
-
-                        <androidx.recyclerview.widget.RecyclerView
-                            android:id="@+id/recyclerView_friendship_request"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:background="?attr/attrBackgroundColorBackground"
-                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                            tools:listitem="@layout/add_contact_item" />
-
-                    </ViewSwitcher>
-
-                </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+                android:id="@+id/swipe_refresh"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
                 <ViewSwitcher
-                    android:id="@+id/viewSwitcher_search"
+                    android:id="@+id/viewSwitcher_friendship_request"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:inAnimation="@anim/fade_in"
                     android:outAnimation="@anim/fade_out">
 
                     <com.naposystems.napoleonchat.ui.custom.emptyState.EmptyStateCustomView
-                        android:id="@+id/empty_state_search"
+                        android:id="@+id/empty_state_friendship_request"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        custom:image="?attr/attrImageEmptyStateSearchContact"
-                        custom:titleEmptyState="@string/text_empty_state_search_contacts" />
+                        custom:image="?attr/attrImageEmptyStateFriendshipRequest"
+                        custom:titleEmptyState="@string/text_empty_state_friendship_description" />
 
                     <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/recyclerView_contacts"
+                        android:id="@+id/recyclerView_friendship_request"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:background="?attr/attrBackgroundColorBackground"
@@ -84,8 +52,33 @@
                         tools:listitem="@layout/add_contact_item" />
 
                 </ViewSwitcher>
-            </ViewSwitcher>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
-</layout>
+            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+            <ViewSwitcher
+                android:id="@+id/viewSwitcher_search"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:inAnimation="@anim/fade_in"
+                android:outAnimation="@anim/fade_out">
+
+                <com.naposystems.napoleonchat.ui.custom.emptyState.EmptyStateCustomView
+                    android:id="@+id/empty_state_search"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    custom:image="?attr/attrImageEmptyStateSearchContact"
+                    custom:titleEmptyState="@string/text_empty_state_search_contacts" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerView_contacts"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="?attr/attrBackgroundColorBackground"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:listitem="@layout/add_contact_item" />
+
+            </ViewSwitcher>
+        </ViewSwitcher>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
