--- a/app/src/main/res/values-de/add_contact.xml
+++ b/app/src/main/res/values-de/add_contact.xml
@@ -3,4 +3,11 @@
     <string name="text_friend_requests_received">Freundschaftsanfragen erhalten</string>
     <string name="text_friend_requests_sent">Freundschaftsanfragen gesendet</string>
     <string name="text_friend_requests">Freundschaftsanfragen</string>
+
+    <string name="text_in_contacts">In Kontakten</string>
+    <string name="text_contact_blocked">Blockiert</string>
+    <string name="text_request_sent">Geschickt</string>
+
+    <string name="text_my_contacts_added">Meine Kontakte</string>
+    <string name="text_coincidence">Zufälle</string>
 </resources>
