--- a/app/src/main/res/layout/add_contact_request_sent_item.xml
+++ b/app/src/main/res/layout/add_contact_request_sent_item.xml
@@ -34,6 +34,7 @@
             android:ellipsize="marquee"
             android:marqueeRepeatLimit="marquee_forever"
             android:singleLine="true"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/textView_user_nickname"
             app:layout_constraintEnd_toStartOf="@+id/guideline5"
             app:layout_constraintStart_toEndOf="@+id/imageView_user_image"
