--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -778,6 +778,7 @@
 
     <style name="AppOutlinedPrimaryButtonSmall" parent="Widget.MaterialComponents.Button.OutlinedButton">
         <item name="android:textColor">@color/green</item>
+        <item name="android:layout_height">40dp</item>
         <item name="iconTint">@null</item>
         <item name="android:textSize">@dimen/minor_text_size</item>
         <item name="strokeColor">@color/green</item>
