--- a/app/src/main/res/layout/add_contact_item.xml
+++ b/app/src/main/res/layout/add_contact_item.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="contact"
-            type="com.naposystems.napoleonchat.source.local.entity.ContactEntity" />
+            type="com.naposystems.napoleonchat.model.addContact.Contact" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,7 +18,7 @@
         <ImageView
             android:id="@+id/imageView_user_image"
             style="@style/imageAvatarItem"
-            app:avatar="@{contact}"
+            app:avatar="@{contact.imageUrl}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -39,7 +39,7 @@
             app:layout_constraintStart_toEndOf="@+id/imageView_user_image"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="packed"
-            app:name="@{contact}"
+            app:name="@{contact.displayName}"
             tools:text="@tools:sample/full_names" />
 
         <TextView
@@ -54,7 +54,7 @@
             app:layout_constraintEnd_toStartOf="@+id/guideline5"
             app:layout_constraintStart_toEndOf="@+id/imageView_user_image"
             app:layout_constraintTop_toBottomOf="@+id/textView_user_name"
-            app:nickname="@{contact}"
+            app:nickname="@{contact.nickname}"
             tools:text="@tools:sample/first_names" />
 
         <androidx.constraintlayout.widget.Guideline
@@ -81,22 +81,22 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:strokeColor="@color/buttonTint" />
 
-        <TextView
-            android:id="@+id/text_sent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/small_margin"
-            android:layout_marginBottom="@dimen/small_margin"
-            android:drawablePadding="@dimen/small_padding"
-            android:gravity="center"
-            android:text="@string/text_request_sent"
-            android:textAllCaps="true"
-            android:textColor="@color/green"
-            android:textSize="@dimen/minor_text_size"
-            app:drawableStartCompat="@drawable/ic_check_primary"
-            app:drawableTint="@color/green"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+<!--        <TextView-->
+<!--            android:id="@+id/text_sent"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginEnd="@dimen/small_margin"-->
+<!--            android:layout_marginBottom="@dimen/small_margin"-->
+<!--            android:drawablePadding="@dimen/small_padding"-->
+<!--            android:gravity="center"-->
+<!--            android:text="@string/text_request_sent"-->
+<!--            android:textAllCaps="true"-->
+<!--            android:textColor="@color/green"-->
+<!--            android:textSize="@dimen/minor_text_size"-->
+<!--            app:drawableStartCompat="@drawable/ic_check_primary"-->
+<!--            app:drawableTint="@color/green"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="parent" />-->
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
