--- a/app/src/main/res/layout/add_contact_request_received_item.xml
+++ b/app/src/main/res/layout/add_contact_request_received_item.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="contact"
-            type="com.naposystems.napoleonchat.source.local.entity.ContactEntity" />
+            type="com.naposystems.napoleonchat.model.addContact.Contact" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,7 +18,7 @@
         <ImageView
             android:id="@+id/imageView_user_image"
             style="@style/imageAvatarItem"
-            app:avatar="@{contact}"
+            app:avatar="@{contact.imageUrl}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -39,7 +39,7 @@
             app:layout_constraintStart_toEndOf="@+id/imageView_user_image"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="packed"
-            app:name="@{contact}"
+            app:name="@{contact.displayName}"
             tools:text="@tools:sample/full_names" />
 
         <TextView
@@ -53,7 +53,7 @@
             app:layout_constraintEnd_toEndOf="@id/textView_user_name"
             app:layout_constraintStart_toStartOf="@id/textView_user_name"
             app:layout_constraintTop_toBottomOf="@+id/textView_user_name"
-            app:nickname="@{contact}"
+            app:nickname="@{contact.nickname}"
             tools:text="@tools:sample/first_names" />
 
         <LinearLayout
