--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -53,6 +53,9 @@
     <dimen name="text_size_call_nickname">28sp</dimen>
     <dimen name="recording_voice_lock_target">-100dp</dimen>
 
+    <dimen name="multiple_attachment_tab_select_stroke">2dp</dimen>
+    <dimen name="multiple_attachment_tab_un_select_stroke">0dp</dimen>
+
     <!-- BEGIN MATERIAL RIPPLE DIMENS -->
     <item name="low_ripple_pressed_alpha" format="float" type="dimen">0.12</item>
     <item name="low_ripple_focused_alpha" format="float" type="dimen">0.12</item>
