--- a/app/src/main/res/layout/view_multiple_attachment_tab.xml
+++ b/app/src/main/res/layout/view_multiple_attachment_tab.xml
@@ -19,4 +19,21 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@tools:sample/backgrounds/scenic" />
 
+    <FrameLayout
+        android:id="@+id/layout_video"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_gravity="bottom|start"
+        android:layout_margin="@dimen/x_small_margin"
+        android:background="@drawable/bg_black_transparent_circle"
+        android:elevation="4dp">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_video"
+            app:tint="@color/white" />
+
+    </FrameLayout>
+
 </com.google.android.material.card.MaterialCardView>
