--- a/app/src/main/res/layout/view_attachment_preview_bottom_tab_layout.xml
+++ b/app/src/main/res/layout/view_attachment_preview_bottom_tab_layout.xml
@@ -4,14 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="2dp"
-    android:background="@drawable/bg_view_attachments_bottom_small_selectable_black">
+    android:background="@drawable/bg_view_attachments_bottom_small_selectable_black"
+    android:paddingTop="@dimen/large_padding"
+    android:paddingBottom="@dimen/small_margin">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_layout_files"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_marginTop="@dimen/large_radius"
-        android:layout_marginBottom="@dimen/small_margin"
         android:background="@null"
         app:layout_constraintBottom_toTopOf="@id/button_send"
         app:layout_constraintEnd_toEndOf="parent"
@@ -28,7 +28,8 @@
         android:layout_margin="@dimen/small_margin"
         android:src="@drawable/ic_send_black"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tab_layout_files" />
 
     <EditText
         android:layout_width="0dp"
